POMP-78: Continuing with modularizing
Making Maven Mapper more modular and create better tests